--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     
     <!-- SEO мета-теги -->
-    <title>Отель "Абсолют" Витязево - Семейный отдых у моря</title>
+    <title>Отель Абсолют Витязево - Семейный отдых у моря</title>
     <meta name="description" content="Современный семейный отель в Витязево с подогреваемым бассейном, детской комнатой и домашним питанием. Первая береговая линия. Бронирование онлайн." />
     <meta name="keywords" content="отель витязево, абсолют витязево, отдых в витязево, семейный отель, подогреваемый бассейн, детская комната, береговая линия, анапа отели, бронирование отель" />
     
