--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="ru">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/png" href="/images/logo/logo-original.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     
     <!-- SEO мета-теги -->
-    <title>Отель Абсолют Витязево - Семейный отдых у моря</title>
+    <title>Отель Абсолют</title>
     <meta name="description" content="Современный семейный отель в Витязево с подогреваемым бассейном, детской комнатой и домашним питанием. Первая береговая линия. Бронирование онлайн." />
     <meta name="keywords" content="отель витязево, абсолют витязево, отдых в витязево, семейный отель, подогреваемый бассейн, детская комната, береговая линия, анапа отели, бронирование отель" />
     
