--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <meta property="og:image" content="/og-image.jpg" />
     
     <!-- Дополнительные мета-теги -->
-    <meta name="theme-color" content="#0A4F7C" />
+    <meta name="theme-color" content="#ffffff" />
     
     <!-- Preconnect для оптимизации загрузки шрифтов -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
